Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjBooleanRetundefined.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, undefined> yoda
        undefined ret = yoda:useForce(one, two)
        output "passed"
     end
end
