Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjBooleanRetundefinedFail.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, undefined> yoda
        boolean wrongRet = yoda(one, two)
     end
end
